<resources>
    <string name="app_name">MyPlayer</string>
    <string name="Open">Mở</string>
    <string name="Close">Đóng</string>
    <string name="feedbacks">Phản Hồi</string>
    <string name="see_all">Xem tất cả</string>
    <string name="artist">Nghệ Sĩ</string>
    <string name="homepage">Trang chủ</string>
    <string name="search">Tìm kiếm</string>
    <string name="name">Họ và Tên</string>
    <string name="pass">Mật Khẩu</string>
    <string name="sign_up">Đăng ký</string>
    <string name="already_a_user">Đã Là Người Dùng ?</string>
    <string name="register">Đăng Nhập</string>
    <string name="home">Trang chủ</string>
    <string name="all_songs">Tất Cả Bài</string>
    <string name="new_songs">Bài mới</string>
    <string name="popular_songs">Bài Nổi Tiếng</string>
    <string name="contact">Liên Hệ</string>
    <string name="featured_songs">Bài Kết Hợp</string>
    <string name="personal">Cá Nhân</string>
    <string name="null_input">K được để trống thông tin </string>
    <string name="sign_in_successfully">Đăng nhập thành công</string>
    <string name="fail_message">User và pass không đúng.Đăng nhập thất bại</string>
    <string name="history">Lịch Sử</string>
    <string name="Genre">Thể Loại</string>
    <string name="question_1">Liệu Ứng dụng có hỗ trợ đa ngôn ngữ ?</string>
    <string name="question_2">Cách báo cáo một vấn đề cho nhà phát triển ?</string>
    <string name="question_3">Cách để nghe những cập nhật mới nhất liên quan tới Ứng Dụng ?</string>
    <string name="question_4">Ứng Dụng MyPlayer là gì?</string>
    <string name="answer_1">Chúng tôi hiện chỉ có hỗ trợ hai ngôn ngữ chính bao gồm Tiếng Việt
                và Tiếng Anh.Bạn có thể thay đổi cài đặt ngôn ngữ bắng cách vào Cá Nhân >
                Cài Đặt > Ngôn Ngữ rồi lựa chọn ngôn ngữ mà bạn muốn đổi</string>
    <string name="answer_2">Bạn có thể vào thanh menu bên trái rồi chọn Phản Hồi rồi bạn có thể báo
                cáo cho chúng tôi những vấn đề mà bạn đang vướng phải khi dùng ứng dụng bằng các
                nhấn nút + ở góc phải dưới màn hình</string>
    <string name="answer_3">Bạn có thể vào thanh menu bên trái rồi vào Liên Hệ rồi chọn phương thức
                liên lạc mà bạn muốn(Zalo,Facebook,Gmail,Phone)</string>
    <string name="answer_4">MyPlayer là ứng dụng được phát triển nhằm phục mục đích nghe nhạc</string>
    <string name="Chart">Bảng Xếp hạng</string>
    <string name="romance">Tình Cảm</string>
    <string name="dance">Nhảy</string>
    <string name="meditate">Thiền</string>
    <string name="english">Tiếng Anh</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="language">Ngôn Ngữ</string>
    <string name="help">Trợ giúp</string>
    <string name="notification">Thông báo</string>
    <string name="setting">Cài Đặt</string>
    <string name="version">Phiên bản</string>
    <string name="sign_out">Đăng Xuất</string>
    <string name="libary">Thư Viện</string>
    <string name="lofi">Lofi</string>
    <string name="please_fill_out_all_the_form">Vui lòng điền đầy đủ thông tin</string>
    <string name="invalid_email">Email không hợp lệ</string>
    <string name="email_has_already_been_use">Địa chỉ email đã được đăng ký</string>
    <string name="sign_up_successfully">Đăng Ký Thành Công!</string>
    <string name="username_already_been_taken">Tên đăng nhập đã tồn tại</string>

    <string name="frequently_asked_question">Câu Hỏi Thường Gặp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>