<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

   <item android:id="@+id/qlHome"
       android:title="@string/home"
       android:textColor="#FFFFFF"
       />

   <item android:id="@+id/qlAllSong"
       android:title="@string/all_songs"
       android:textColor="#FFFFFF"
       />
   <item android:id="@+id/qlFeaturedSong"
       android:title="@string/featured_songs"
       android:textColor="#FFFFFF"
       />

   <item android:id="@+id/qlPopularSong"
       android:title="@string/popular_songs"
       android:textColor="#FFFFFF"
       />
   <item
       android:id="@+id/qlNewSong"
       android:title="@string/new_songs"
       android:textColor="#FFFFFF"
       />
   <item
       android:id="@+id/qlTheLoai"
       android:title="@string/Genre"
       android:textColor="#FFFFFF"
       />
   <item
       android:id="@+id/qlBangXepHang"
       android:title="@string/Chart"
       android:textColor="#FFFFFF"
       />
   <item
       android:id="@+id/qlFeedback"
       android:title="@string/feedbacks"
       android:textColor="#FFFFFF"
       />
   <item
       android:id="@+id/qlContact"
       android:title="@string/contact"
       android:textColor="#FFFFFF"
       />
</menu>