<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Fragment_Help">
    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frequently_asked_question"
            android:textSize="26sp"
            android:padding="20dp"
            android:textStyle="bold"
            android:textColor="#B200FF"
            android:textAlignment="center"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question_1"
            android:padding="11dp">
            <TextView
                android:id="@+id/heading_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4"
                android:textSize="16sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/arrow_1"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/baseline_keyboard_arrow_down_24"
                android:layout_alignParentEnd="true"/>
            <TextView
                android:id="@+id/content_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:visibility="gone"
                android:layout_below="@id/heading_1"
                android:text="@string/answer_4"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question_2"
            android:padding="11dp">

            <TextView
                android:id="@+id/heading_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/question_2"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/arrow_2"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/baseline_keyboard_arrow_down_24"
                android:layout_alignParentEnd="true"/>
            <TextView
                android:id="@+id/content_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:visibility="gone"
                android:layout_below="@id/heading_2"
                android:text="@string/answer_2"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:id="@+id/question_3">
            <TextView
                android:id="@+id/heading_3"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/question_3"
                android:textSize="16sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/arrow_3"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/baseline_keyboard_arrow_down_24"
                android:layout_alignParentEnd="true"/>
            <TextView
                android:id="@+id/content_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:visibility="gone"
                android:layout_below="@id/heading_3"
                android:text="@string/answer_3"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question_4"
            android:padding="11dp">
            <TextView
                android:id="@+id/heading_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1"
                android:textSize="16sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/arrow_4"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/baseline_keyboard_arrow_down_24"
                android:layout_alignParentEnd="true"/>
            <TextView
                android:id="@+id/content_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:visibility="gone"
                android:layout_below="@id/heading_4"
                android:text="@string/answer_1"
                />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>