<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nen_03"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login.Register">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/ledanme"
            >
            <Button
                android:id="@+id/register_exit"
                android:layout_width="76dp"
                android:layout_height="40dp"
                android:layout_marginLeft="-10dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/baseline_arrow_circle_left_24"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="@+id/textView7"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#8692F7"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/register_username"
                android:background="@drawable/ledanme"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/name"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/register_email"
                android:background="@drawable/ledanme"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="email@.com"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/register_password"
                android:background="@drawable/ledanme"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/baseline_remove_red_eye_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/sign_up"
                android:id="@+id/register_button"
                android:textSize="18sp"
                android:backgroundTint="#8692F7"
                android:layout_marginTop="30dp"
                app:cornerRadius="20dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
